update TestDiffer.java