@@ -1,21 +1,23 @@
 package hexlet.code;
 
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 
-
-import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Map;
+import java.nio.file.Paths;
 
 public class TestDiffer {
-    private Path pathFile1 = Path.of("C:\\Users\\disa_\\IdeaProjects\\java-project-71\\app\\src\\test\\resources\\testFile1.json");
-    private Path pathFile2 = Path.of("C:\\Users\\disa_\\IdeaProjects\\java-project-71\\app\\src\\test\\resources\\testFile2.json");
-    @Test
+    private Path getPath(String filename) {
+        return Paths.get("src/test/resources", filename).toAbsolutePath().normalize();
+    }
+
+    private String read(String filename) throws IOException {
+        Path path = getPath(filename);
+        return Files.readString(path);
+    }
+    /*@Test
     public void testGetData() throws IOException {
         File file = new File("src\\test\\resources\\file1.json");
         ObjectMapper objectMapper = new ObjectMapper();
@@ -23,18 +25,17 @@ public class TestDiffer {
 
         assertTrue(map.containsKey("timeout"));
         assertEquals(map.get("host"), "hexlet.io");
-    }
+    }*/
     @Test
     public void testGenerate() {
-        String expected = "{\n" +
-                "- follow: false\n" +
-                "- host: hexlet.com\n" +
-                "+ host: hexlet.io\n" +
-                "- timeout: 50\n" +
-                "+ timeout: 20\n" +
-                "+ verbose: true\n" + "}";
+        String expected = null;
+        try {
+            expected = read("expected.Json");
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
 
-        String actual = Differ.generate(pathFile1, pathFile2);
+        String actual = Differ.generate(getPath("testFile1.json"), getPath("testFile2.json"));
         assertEquals(expected, actual);
     }
 }
